--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -43,7 +43,8 @@
 #
 #++++++++++++++++++++++++++++++++++++++
 
-FROM webdevops/php-apache-dev:ubuntu-16.04
+#FROM webdevops/php-apache-dev:ubuntu-16.04
+FROM webdevops/php-nginx:7.2
 
 ENV PROVISION_CONTEXT "development"
 
